# sona-ai

./: .env.example  .gitignore  README.md  flan-t5-test.ipynb  requirements.txt
api/: main.py
backend/: pyproject.toml  requirements-parakeet.txt  requirements.txt
backend/src/sona_ai/: __init__.py
backend/src/sona_ai/alignment/: __init__.py  base.py  wav2vec2_aligner.py
backend/src/sona_ai/api/: main.py
backend/src/sona_ai/api/routes/: projects.py  runtime.py  summarize.py  transcribe.py
backend/src/sona_ai/api/schemas/: projects.py  summarize.py
backend/src/sona_ai/core/: __init__.py  devices.py  paths.py  utils.py
backend/src/sona_ai/db/: __init__.py  engine.py  models.py  session.py
backend/src/sona_ai/diarization/: __init__.py  base.py  pyannote_diarizer.py  schemas.py
backend/src/sona_ai/pipelines/: __init__.py  factory.py  speaker_assignment.py  speech_pipeline.py
backend/src/sona_ai/retrieval/: __init__.py
backend/src/sona_ai/services/: __init__.py  recording_worker.py  summarization_service.py  transcription_service.py
backend/src/sona_ai/storage/: __init__.py  audio.py
backend/src/sona_ai/summarization/: __init__.py  gemma4_summarizer.py  gguf_summarizer.py  hf_summarizer.py  prompts.py
backend/src/sona_ai/transcription/: __init__.py  base.py  parakeet_transcriber.py  schemas.py  whisperx_engine.py  whisperx_transcriber.py
configs/: flan-t5.yaml  gemma.yaml  gpt2.yaml  llama.yaml  parakeet.yaml  qwen.yaml  speech.yaml  whisperx.yaml
experiments/: __init__.py
notebooks/: flan-t5-test.ipynb  summarizer-test.ipynb  (+1 more)
(+44 files in other folders)
