[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sona-ai-backend"
version = "0.1.0"
requires-python = ">=3.10"
description = "Runtime backend for Sona AI"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
parakeet = ["nemo_toolkit[asr]"]
